--- a/Classes/Declaration/OperationBody.hbs
+++ b/Classes/Declaration/OperationBody.hbs
@@ -1,3 +1,3 @@
 {
-    throw new Exception("Operation '{{ operationName }}' is not implemented yet.");
+    throw new Exception("Operation '{{ name }}' is not implemented yet.");
 }
