Fixing code-generation of associations as array

--- a/Classes/Declaration/AttributeDeclaration.hbs
+++ b/Classes/Declaration/AttributeDeclaration.hbs
@@ -1,1 +1,1 @@
-{{ visibility }} {{#if static}} static {{/if}} ${{ name }} {{#if defaultValue}} = {{ defaultValue }} {{/if}};
+{{ visibility }} {{#if static}} static {{/if}} ${{ name }} {{#if isArray }} = array(){{/if}} {{#if defaultValue}} = {{ defaultValue }} {{/if}};
